fix: all typing warnings (#38)
* fix: otp verification

* fix: uuid serialize response

* fix: typing warnings
